
Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

1/16/15
    - Cleaned up and improved consistency of output in printpf() for
      generation and dispatchable load constraints.

1/15/15
    - Fixed bug in handling of interface flow limits, where multipliers
      on binding interface flow limits were off by a factor of the p.u.
      MVA base.
    - Fixed sign error on multipliers on lower bound on constraints
      in qps_clp() and qps_glpk(). Modified a test in t_qps_matpower()
      to check for this.

1/14/15
    - Added support for LP/QP solver CLP (COIN_OR Linear Programming).
      Use 'opf.dc.solver' option 'CLP' or qps_clp().
    - Added note to README and home page about OPTI Toolbox by
      Jonathan Currie being an easy way to install some good solvers
      for Windows users.

1/13/15
    - Updated t_opf_dc_ot() to remove the skipping of the checking of
      price results for the dual-simplex algorithm for all versions of
      Matlab except R2014b, the first version that included the
      dual-simplex algorthm. For some reason, in this version it did
      not return any Lagrange multipliers!?!.
    - Increment MATPOWER options version number to 5 (forgot to do it
      previously for 3, 4, and 5) and included code to update older
      options structs to current version.

1/7/15
    - Improved detection of GLPK version in mpver() and GLPK
      availability in have_fcn(), now compatible with GLPK installed
      by OPTI Toolbox (http://www.i2c2.aut.ac.nz/Wiki/OPTI/).

12/22/14
    - Fixed fatal bug in toggle_dcline() when pretty-printing results.

12/18/14
    - Fixed fatal bug in case_info() for islands with no generation.


Changes since 5.0b1
-------------------

12/17/14
    - Released version 5.0.

12/16/14